--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ script:
    - gem install travis
    - curl -LO https://gist.githubusercontent.com/sslotin/d3dea9fbf47b265c3be2d15b99dd1c17/raw/f1fbf0f8d9bef84e22e1c13edbf1005b47a8c85e/trigger.sh
    - chmod +x trigger.sh
-   - ./trigger.sh algorithmica-org articles master $GITHUB_ACCESS_TOKEN
+   - ./trigger.sh algorithmica-org articles master $GITHUB_TOKEN
