--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language:
 
 script:
    - gem install travis
-   - curl -LO https://gist.githubusercontent.com/sslotin/d3dea9fbf47b265c3be2d15b99dd1c17/raw/6c78a214341bed2e06e08753789b29753d9896aa/trigger.sh
-   - chmod +x trigger.sh
-   - ./trigger.sh algorithmica-org articles master $GITHUB_TOKEN
+   - curl -LO https://gist.githubusercontent.com/sslotin/bebe226efe3d2dbda2beb0a0f1a97026/raw/4592d537956488f3c2f14483ec15474b2c0c5da5/trigger-build.sh
+   - chmod +x trigger-build.sh
+   - ./trigger.sh $GITHUB_TOKEN
